metadata/force-app/main/default/objects/CustomName_lhaRG__c/CustomName_lhaRG__c.object-meta.xml
<CustomObject>
    <description>Description_MTZyY</description>
    <label>CustomLabel_VBJAI</label>
    <nameField>
        <label>CustomLabel_VBJAI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_VBJAIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>