metadata/force-app/main/default/objects/CustomName_lhaRG__c/fields/CustomField_ecHvx__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ecHvx__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldiGlKp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>