metadata/force-app/main/default/objects/CustomName_lhaRG__c/fields/CustomField_rnWBE__c.field-meta.xml
<CustomField>
    <fullName>CustomField_rnWBE__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldJxdsE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>